--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,28 +8,17 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136957763-1"></script>
     <script>
-      window.fbAsyncInit = function () {
-        FB.init({
-          appId: '250744242473852',
-          autoLogAppEvents: true,
-          xfbml: true,
-          version: 'v2.11'
-        });
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-        // Broadcast an event when FB object is ready
-        var fbInitEvent = new Event('FBObjectReady');
-        document.dispatchEvent(fbInitEvent);
-      };
-
-      (function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) { return; }
-        js = d.createElement(s); js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
+      gtag('config', 'UA-136957763-1');
     </script>
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
